...
    };

    /**
     * Navigates to the Post screen.
     */
    const goToPost = () => {
        setActiveRoute("Post");
        navigation.navigate("Post");
    };

    /**
     * Navigates to the Notification screen.
     */
...
    if (activeRoute === "Post") {
        return null;
    }

    return (
        <View style={styles.container}>
            <TouchableOpacity style={styles.menu} onPress={goToHome} testID="home-nav-icon">
                <HomeIcon {...styles.icon} fill={fillColor("Home")} />
            </TouchableOpacity>

            <TouchableOpacity
                style={styles.menu}
                onPress={goToYourTeam}
...
            >
                <DoubleUserIcon {...styles.icon} fill={fillColor("YourTeam")} />
            </TouchableOpacity>
            <TouchableOpacity
                style={styles.menu}
                onPress={goToPost}
                testID="create-post-tab-icon"
            >
                <View style={styles.postButton}>
                    <PlusIconSVG width={24} height={24} />
                </View>
            </TouchableOpacity>

            <TouchableOpacity
                style={styles.menu}
                onPress={goToNotification}
                testID="notification-nav-icon"
            >
                <BellIcon {...styles.icon} fill={fillColor("Notification")} />
                <UnreadNotificationBadge
                    count={
                        unreadNotificationCount ? unreadNotificationCount : 0
                    }
                />
            </TouchableOpacity>

            <TouchableOpacity
                style={styles.menu}
                onPress={goToProfile}
                testID="profile-nav-icon" 
            >
                <CircledUserIcon {...styles.icon} fill={fillColor("Profile")} />
            </TouchableOpacity>
        </View>
    );
}
...
