...
                    <TextInput
                        ref={inputRef}
                        style={styles.inputField}
                        onLayout={(e) => {
                            setTextHeight(e.nativeEvent.layout.height);
                        }}
                        placeholder="What's on your mind?"
                        placeholderTextColor="#666666"
                        multiline
                        value={postText}
                        onChangeText={handleInputChange}
                    />
                </ScrollView>
...
