...
        <SafeAreaView style={styles.container}>
            <View style={styles.header}>
                <View style={styles.wrapper}>
                    <TouchableOpacity
                        onPress={navigation.goBack}
                        style={styles.backIcon}
                        testID="back_button"
                    >
                        <LeftArrowSVG />
                    </TouchableOpacity>
                    <Text style={styles.text}>Post</Text>
                </View>
            </View>
...
