...
                        style={[styles.btn, styles.quoteBtn]}
                        onPress={() => {
                            sheetRef.current?.close();
                            onPress();
                        }}
                    >
                        <Text style={styles.text}>Quote it</Text>
                    </TouchableOpacity>
                    <TouchableOpacity
                        style={[styles.btn, styles.cancelBtn]}
                        onPress={onClose}
                    >
                        <Text style={styles.text}>Cancel</Text>
...
