...
        maxWidth:"55%"
    },
    dateText: {
        color: "#687684",
        fontSize: 16,
    },
    authorImage: {
        width: 24,
        height: 24,
        borderRadius: 12,
    },
    maskedPreview: {
        borderColor: "#66C32E",
...
