...
import ImageContainer from "./ImageContainer";
import PostText from "./PostText";
import QuotePreview from "./QuotePreview";

const FeedPost = (props) => {
    const {
        post,
        type,
        postIndex,
        content,
        userData,
        addLocalReply,
        setCurrentChannel,
...
            [
                {
                    text: "Cancel",
                    style: "cancel",
                },
                {
                    text: "Confirm",
                    style: "destructive",
                    // onPress: async () => {
                    //     try {
                    //         await deletePost(postId);
                    //         removePost(postId);
                    //     } catch (error) {
...
                                    <TouchableOpacity
                                        style={{ marginLeft: 8 }}
                                        onPress={() => {
                                            // setShowEditPostChannelModal(true);
                                            editPostChannelSheetRef.current?.open();
                                        }}
                                        testID="edit-post-icon"
                                    >
                                        <ThreeDotsIcon />
                                    </TouchableOpacity>
                                )}
                            </View>
                        )}
...
