appId: "com.mycurio.curio"
---
- launchApp
- waitForAnimationToEnd
- assertVisible: "Login"

# Tap on Email field and enter text
- tapOn:
    point: 14%,51%
- inputText: "olman@yopmail.com"

# Tap outside to dismiss keyboard
- tapOn:
    point: 12%,29%

# Tap on Password field and enter text
- tapOn:
    point: 17%,61%
- inputText: "Test@1234"

- tapOn:
    point: 12%,29%


# Tap on Login button
- tapOn: "Login"

# Verify login success
- assertNotVisible: "Login"


- tapOn:
      id: create-post-tab-icon

- tapOn: "What's on your mind?"
- inputText: "This is a test post for notification"

- hideKeyboard

- tapOn: "Post"

- waitForAnimationToEnd

- tapOn:
      id: "profile-nav-icon"


- tapOn:
      id: "profile-more"
- tapOn: "Logout"
- tapOn: "Logout"
- waitForAnimationToEnd


# Wait for screen to load
- waitForAnimationToEnd
- assertVisible: "Login"

# Tap on Email field and enter text
- tapOn:
    point: 14%,51%
- inputText: "mabel@yopmail.com"

# Tap outside to dismiss keyboard
- tapOn:
    point: 12%,29%

# Tap on Password field and enter text
- tapOn:
    point: 17%,61%
- inputText: "Test@123"

- tapOn:
    point: 12%,29%


# Tap on Login button
- tapOn: "Login"

# Verify login success
- assertNotVisible: "Login"
- waitForAnimationToEnd

- tapOn:
    id: "notification-nav-icon"
- tapOn:
    id: "authorImage"
- tapOn:
    id: "user-page-back-button"
- tapOn:
    id: "authorImage"
    index: 0
- tapOn:
    id: "user-page-back-button"
- swipe:
    start: "39%,78%"
    end: "39%,29%"
    duration: 520
- tapOn:
    id: "profile-nav-icon"
- tapOn:
    id: "notification-nav-icon"
- assertVisible: "This is a test post for notification"
- tapOn:
      id: "profile-nav-icon"


- tapOn:
      id: "profile-more"
- tapOn: "Logout"
- tapOn: "Logout"
- waitForAnimationToEnd

- assertVisible: "Login"