appId: "com.mycurio.curio"
---
# - launchApp
- waitForAnimationToEnd
# - assertVisible: "Login"

# # Tap on Email field and enter text
# - tapOn:
#     point: 14%,51%
# - inputText: "mabel@yopmail.com"

# # Tap outside to dismiss keyboard
# - tapOn:
#     point: 12%,29%

# # Tap on Password field and enter text
# - tapOn:
#     point: 17%,61%
# - inputText: "Test@123"

# - tapOn:
#     point: 12%,29%


# # Tap on Login button
# - tapOn: "Login"

# # Verify login success
# - assertNotVisible: "Login"

- tapOn:
    id: "create-post-tab-icon"
- tapOn: "What's on your mind?"
- inputText: "Test post to add instant reply on home screen"
- tapOn: "Post"

- waitForAnimationToEnd
- tapOn: "Post"
- tapOn:
    id: "profile-nav-icon"
- tapOn: "Test post to add instant reply on home screen"
- tapOn:
    id: "add-reply"
- tapOn: "Post your reply"
- inputText: "My reply to add instant"
- tapOn: "Reply"

- waitForAnimationToEnd
- tapOn: "Reply"
- tapOn:
    id: "back_button"
- tapOn:
    id: "home-nav-icon"
- assertVisible: "My reply to add instant"
- tapOn:
    id: "profile-nav-icon"
- tapOn:
    id: "delete-post"
    index: 0
- tapOn: "Delete"
- waitForAnimationToEnd
- tapOn:
    id: "home-nav-icon"
- waitForAnimationToEnd
- assertNotVisible: "My reply to add instant"
- tapOn:
    id: "profile-nav-icon"
- tapOn:
    id: "delete-post"
    index: 0
- tapOn: "Delete"
- waitForAnimationToEnd

- tapOn:
    id: "profile-more"
- tapOn: "Logout"
- waitForAnimationToEnd

- tapOn: "Logout"
- "waitForAnimationToEnd"
- assertVisible: "Login"
